added css library
css library is Pico, which is classless

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,9 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+<main class="container">
   <app-root></app-root>
+</main>
+
 </body>
 </html>
