--- a/src/index.html
+++ b/src/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DietLogsRevUi</title>
+  <title>Diet Logs Revisited</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-<main class="container">
-  <app-root></app-root>
-</main>
+
+  <main class="container">
+    <app-root></app-root>
+  </main>
 
 </body>
 </html>
